--- a/Web/Login.html
+++ b/Web/Login.html
@@ -25,6 +25,9 @@
                     <input type="password" name="username" lay-verify="required" placeholder="请输入密码 " autocomplete="off" class="layui-input">
                 </div>
             </div>
+            <div class="layui-form-item">
+                <button class="layui-btn" lay-submit="" lay-filter="demo2">跳转式提交</button>
+            </div>
 
         </form>
     </div>
