--- a/Web/Login.html
+++ b/Web/Login.html
@@ -39,7 +39,7 @@
 
 </body>
 <script src="../JavaScript/layui/layui.js"></script>
-<scriptss>
+<script>
     layui.use(['form', 'layedit', 'laydate'], function(){
         var form = layui.form,1,layer = layui.layer;
 
@@ -53,5 +53,5 @@
 
 
     });
-</scriptss>
+</script>
 </html>
