--- a/Web/Login.html
+++ b/Web/Login.html
@@ -41,7 +41,7 @@
 <script src="../JavaScript/layui/layui.js"></script>
 <script>
     layui.use(['form', 'layedit', 'laydate'], function(){
-        var form = layui.form,1,layer = layui.layer;
+        var form = layui.form,,layer = layui.layer;
 
         //监听提交
         form.on('submit(demo1)', function(data){
@@ -49,7 +49,7 @@
                 title: '最终的提交信息'
             })
             return false;
-        });;
+        });
 
 
     });
