--- a/Web/Login.html
+++ b/Web/Login.html
@@ -41,12 +41,12 @@
 <script src="../JavaScript/layui/layui.js"></script>
 <script>
     layui.use(['form', 'layedit', 'laydate'], function(){
-        var form = layui.form,,layer = layui.layer;
+        var form = layui.form,layer = layui.layer;
 
         //监听提交
         form.on('submit(demo1)', function(data){
             layer.alert(JSON.stringify(data.field), {
-                title: '最终的提交信息。'
+                title: '最终的提交信息。！'
             })
             return false;
         });
