--- a/Web/Login.html
+++ b/Web/Login.html
@@ -46,7 +46,7 @@
         //监听提交
         form.on('submit(demo1)', function(data){
             layer.alert(JSON.stringify(data.field), {
-                title: '最终的提交信息。'
+                title: '最终的提交信息。',
             })
             return false;
         });
